# amazoncaptcha

./: .gitignore  Makefile  Pipfile  pyproject.toml  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  codeql-analysis.yml  python-publish.yml
amazoncaptcha/: __init__.py  __version__.py  devtools.py  exceptions.py  solver.py  utils.py
docs/: conf.py
ext/: requirements-dev.txt
tests/: test_main.py
